--- a/2021-1/apunte/Cap.03.tex
+++ b/2021-1/apunte/Cap.03.tex
@@ -74,7 +74,7 @@ $$
 \end{proof}
 
 
-\begin{ejemplo*} {} 
+\begin{ejemplo*} ${}^{}$ 
 
 \begin{itemize}
 \item Si $a=10$ y $b=3$, entonces $10 = 3 \cdot 3 +1$. Es decir $q= 3$, $r=1$. 
